Refactor analyses that are run from jobs service
