# bayesian_jobs/api_v1.py
@@ -164,17 +164,8 @@ def post_selective_flow_scheduling(scheduler, **kwargs):
 
 
 @uses_scheduler
-def post_popular_analyses(scheduler, **kwargs):
-    if kwargs['ecosystem'] == 'maven':
-        handler_name = handlers.MavenPopularAnalyses.__name__
-    elif kwargs['ecosystem'] == 'npm':
-        handler_name = handlers.NpmPopularAnalyses.__name__
-    elif kwargs['ecosystem'] == 'pypi':
-        handler_name = handlers.PythonPopularAnalyses.__name__
-    else:
-        return {"error": "Unknown ecosystem '{}'".format(kwargs['ecosystem'])}, 401
-
-    kwargs.pop('ecosystem')
+def post_analyses(scheduler, **kwargs):
+    handler_name = handlers.base.AnalysesBaseHandler.ecosystem2handler_name(kwargs['ecosystem'])
     return post_schedule_job(scheduler, handler_name, **kwargs)
 
 
